fix: header now displays cart and item select buttons on mobile

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,8 +2,8 @@
 
 .bl-header {
 	background-color: $primary-color;
-	height: 80px;
-	padding: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	border-bottom: 2px solid $secondary-color;
 }
 
